Added separate streams for in and out during maven compile project task.